icons background color not showing corrected

--- a/Css/styles.css
+++ b/Css/styles.css
@@ -229,7 +229,7 @@ img{
   
     font-size: 1.6rem;
     padding: 8px;
-    background-color: #272727;
+    background-color: #282828;
     margin: 0 var(--mb-1);  
     border-radius: 50%;
 
@@ -485,7 +485,7 @@ img{
     justify-self: center;
 }
 .fone,.ftwo,.fthree{
-    background-color: #272727;
+    background-color: #282828;
     padding:5px 7px 2px 7px;
     font-size: 1.6rem;
     border-radius: 50%;
